# gol-cuda

./: .gitignore  CMakeLists.txt  README.md
GOLApp/: CMakeLists.txt  golapp.cpp  golapp.h  main.cpp
GOLlib/: CMakeLists.txt  golcpu.cpp  golcpu.h  grid.cpp  grid.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
